Sycho with Sass

--- a/index.html
+++ b/index.html
@@ -89,15 +89,28 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="col-xl-3"></div>
+                        <div class="col-xl-3">
+                            <div class="header-right">
+                                <div class="header-cta">
+                                    <i class="fas fa-phone-alt"></i>
+                                    <span><a href="tell:+1(202) 588-6500">+1 (202) 588-6500</a></span>
+                                </div>
+                                <div class="header-bar">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </header> 
+        </header>  
           <!--Header-area end-->
         <!--Slider-area start-->
         <section class="slider-area">
             <img src="assets/img/slider-bg.jpg" alt="">
+            
         </section>
         <!--Slider-area end-->
 
