Sycho Project with sass

--- a/index.html
+++ b/index.html
@@ -110,17 +110,18 @@
         <!--Slider-area start-->
         <main>
             <div class="slider-area" style="background-image: url(assets/img/slider-bg.jpg);">
-                <div class="container-fluid">
+                <div class="container-fluid p-0">
                     <div class="single-slider">    
-                        <div class="row align-items-center text-text">
+                        <div class="row align-items-center no-gutter">
                             <div class="col-xl-5">
                                 <div class="slider-content">
                                     <span>Every depression solution</span>
-                                    <h2>best therapy makes excellent yours famuly</h2>
+                                    <h2>Best therapy makes Excellent yours famuly</h2>
+                                    <a class="button-1"  href="#">Contact Us now</a>
                                 </div>
                             </div>          
                             <div class="col-xl-7">
-                                <div class="slider-img mt-250">
+                                <div class="slider-img mt-200">
                                     <img src="assets/img/slider-humb.jpg" alt="">
                                 </div>
                             </div>
@@ -130,6 +131,30 @@
             </div>
         </main>
         <!--Slider-area end-->
+        <!--Features-area start-->
+        <section class="features-area"style="background-image: url(assets/img/features-bg.jpg);"> 
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xl-4">
+                        <div class="features-item mb-30">
+                            <div class="features-icon">
+                                <i class="far fa-handshake"></i>
+                            </div>
+                            <div class="features-content">
+                                <h3>Satisfies
+                                    patient service
+                                </h3>
+                                <p>feel most better on the hearts</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--Features-area end-->
+
+
+
         <!-- Scroll Btn End -->
         <!-- Main JS -->
         <script src="assets/js/jquery-3.6.0.min.js"></script>
