Sycho Project with sass

--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
         </main>
         <!--Slider-area end-->
         <!--Features-area start-->
-        <section class="features-area"style="background-image: url(assets/img/features-bg.jpg);"> 
+        <section class="features-area pl-100 pr-100"style="background-image: url(assets/img/features-bg.jpg);"> 
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xl-4">
-                        <div class="features-item mb-30">
+                        <div class="features-item mb-30 d-flex">
                             <div class="features-icon">
                                 <i class="far fa-handshake"></i>
                             </div>
@@ -144,7 +144,29 @@
                                 <h3>Satisfies
                                     patient service
                                 </h3>
-                                <p>feel most better on the hearts</p>
+                                <p>Nostrud exerctation to ullamco laibor nisiod in above murli aliquip commodo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="features-item mb-30 d-flex">
+                            <div class="features-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <div class="features-content">
+                                <h3>Dedicated Therapist</h3>
+                                <p>Nostrud exerctation to ullamco laibor nisiod in above murli aliquip commodo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="features-item mb-30 d-flex">
+                            <div class="features-icon">
+                                <i class="fas fa-phone-slash"></i>
+                            </div>
+                            <div class="features-content">
+                                <h3>Support Patient</h3>
+                                <p>Nostrud exerctation to ullamco laibor nisiod in above murli aliquip commodo</p>
                             </div>
                         </div>
                     </div>
