Sycho Project with sass

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 </div>
                             </div>          
                             <div class="col-xl-7">
-                                <div class="slider-img mt-200">
+                                <div class="slider-img">
                                     <img src="assets/img/slider-humb.jpg" alt="">
                                 </div>
                             </div>
@@ -174,6 +174,146 @@
             </div>
         </section>
         <!--Features-area end-->
+        <!--Service-area start-->
+        <div class="service-area pt-100 pb-100 mb-30">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="section-title-wrap text-center mb-60 mt-100">
+                                <div class="section-sub-title mb-30">
+                                    <img src="assets/img/sec-icon-1.png" alt="">
+                                </div>
+                                <h2 class="section-title mb-10">Professional Psychology Therapy 
+                                   <br> Service You Can Choose</h2>
+                                <span>affordable Services</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-4">
+                        <div class="services-box mb-30">
+                            <div class="services-img">
+                                <img src="assets/img/services-1.jpg" alt="">
+                                <div class="services-bottom-title">
+                                    <h3>Couple Therapy</h3>
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="services-content pt-100 pb-100">
+                                <h3><a href="#">Anxiety Disored</a></h3>
+                                <p>Dry waters sea sixth that to over above whose him haden thing bring man Signs which</p>
+                                <a href="#" class="button-3" >More Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="services-box mb-30">
+                            <div class="services-img">
+                                <img src="assets/img/services-2.jpg" alt="">
+                                <div class="services-bottom-title">
+                                    <h3>Couple Therapy</h3>
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="services-content pt-100 pb-100">
+                                <h3><a href="#">Anxiety Disored</a></h3>
+                                <p>Dry waters sea sixth that to over above whose him haden thing bring man Signs which</p>
+                                <a href="#" class="button-3" >More Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="services-box mb-30">
+                            <div class="services-img">
+                                <img src="assets/img/services-3.jpg" alt="">
+                                <div class="services-bottom-title">
+                                    <h3>Couple Therapy</h3>
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="services-content pt-100 pb-100">
+                                <h3><a href="#">Anxiety Disored</a></h3>
+                                <p>Dry waters sea sixth that to over above whose him haden thing bring man Signs which</p>
+                                <a href="#" class="button-3" >More Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="services-box mb-30">
+                            <div class="services-img">
+                                <img src="assets/img/services-4.jpg" alt="">
+                                <div class="services-bottom-title">
+                                    <h3>Couple Therapy</h3>
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="services-content pt-100 pb-100">
+                                <h3><a href="#">Anxiety Disored</a></h3>
+                                <p>Dry waters sea sixth that to over above whose him haden thing bring man Signs which</p>
+                                <a href="#" class="button-3" >More Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="services-box mb-30">
+                            <div class="services-img">
+                                <img src="assets/img/services-5.jpg" alt="">
+                                <div class="services-bottom-title">
+                                    <h3>Couple Therapy</h3>
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="services-content pt-100 pb-100">
+                                <h3><a href="#">Anxiety Disored</a></h3>
+                                <p>Dry waters sea sixth that to over above whose him haden thing bring man Signs which</p>
+                                <a href="#" class="button-3" >More Details</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="services-box mb-30">
+                            <div class="services-img">
+                                <img src="assets/img/services-6.jpg" alt="">
+                                <div class="services-bottom-title">
+                                    <h3>Couple Therapy</h3>
+                                    <i class="fas fa-plus"></i>
+                                </div>
+                            </div>
+                            <div class="services-content pt-100 pb-100">
+                                <h3><a href="#">Anxiety Disored</a></h3>
+                                <p>Dry waters sea sixth that to over above whose him haden thing bring man Signs which</p>
+                                <a href="#" class="button-3" >More Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </div>
+        <!--Service-area end--> 
+        <!--About-Doctor-area start--> 
+        <section class="about-doctor" style="background-image: url(assets/img/features-bg.jpg);">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-5">
+                        <div class="Doctor-img">
+                            <img src="assets/img/sychologist-person.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-xl-7">
+                        <div class="doctor-content pt-100">
+                            <h2>Dr Noorie Abbas</h2>
+                            <h5>Psychotherapist, Medinova Hospital in California</h5>
+                            <p>Viverra pede suscipit dapibus litora mus nascetur nec molestie laoreet volutpat egete vul putate. Donec facilisi pede metus. Sapien risus, eleifend ornare adipiscing senectus soci osqu. Scelerisque felis convallis vel cras vel nisl dignissim quis phasellus eleifend potenti oictumst mi nisi semper penatibus maecenas lorem tortor a parturient rhoncus quis pose uere evelum the meaning quam ac.</p>
+                            <div class="btn">
+                               <a href="#" class="button-2">GET APPOINMENT</a>
+                                <img src="assets/img/signature.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>0000000000000
+        </section>
+        <!--About-Doctor-area end--> 
 
 
 
