Cycho with sass

--- a/index.html
+++ b/index.html
@@ -300,20 +300,100 @@
                         </div>
                     </div>
                     <div class="col-xl-7">
-                        <div class="doctor-content pt-100">
+                        <div class="doctor-content pt-100 mt-30">
                             <h2>Dr Noorie Abbas</h2>
-                            <h5>Psychotherapist, Medinova Hospital in California</h5>
+                            <h4 class="mb-20">Psychotherapist, Medinova Hospital in California</h4>
                             <p>Viverra pede suscipit dapibus litora mus nascetur nec molestie laoreet volutpat egete vul putate. Donec facilisi pede metus. Sapien risus, eleifend ornare adipiscing senectus soci osqu. Scelerisque felis convallis vel cras vel nisl dignissim quis phasellus eleifend potenti oictumst mi nisi semper penatibus maecenas lorem tortor a parturient rhoncus quis pose uere evelum the meaning quam ac.</p>
-                            <div class="btn">
+                            <div class="button-content pt-30">
                                <a href="#" class="button-2">GET APPOINMENT</a>
                                 <img src="assets/img/signature.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>0000000000000
+            </div>
         </section>
         <!--About-Doctor-area end--> 
+        <!--Get-Appoinmentment-area start-->
+        <section class="appointment-area mb-100">
+            <div class="container">
+                <div class="Dr-appointment-box">
+                    <div class="row">
+                        <div class="col-xl-5">
+                            <div class="appointment-box">
+                                <h2>Get Appointment</h2>
+                                <div class="appoinment-form">
+                                    <form action="#">
+                                        <input type="text" placeholder="Your Name">
+                                        <input type="email" placeholder="Email Address">
+                                        <textarea name="message" id="" cols="30" rows="10" placeholder="Write Message"></textarea>
+                                        <button  class="submit-btn mt-30" type="submit">MAKE AN APPOINTMENT</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-7">
+                            <div class="counter-box">
+                                <div class="section-title-wrap ml-40 mt-40">
+                                    <div class="section-sub-title mb-20">
+                                        <img src="assets/img/sec-icon-1.png" alt="">
+                                        <span> our achievement</span>
+                                    </div>
+                                    <h2 class="section-title mb-60">Healing Through More Than Reality and Games</h2>
+                                </div>
+                                <div class="counter-list-box">
+                                    <div class="counter-item">
+                                        <h2>290</h2>
+                                        <span>Psychologist</span>
+                                    </div>
+                                    <div class="counter-item">
+                                        <h2>215</h2>
+                                        <span>All Branches</span>
+                                    </div>
+                                    <div class="counter-item">
+                                        <h2>252+</h2>
+                                        <span>Total Patient</span>
+                                    </div>
+                                    <div class="counter-item">
+                                        <h2>100</h2>
+                                        <span>Award Winner</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--Get-Appoinmentment-area end--> 
+        <!--Portfolio-area-start--> 
+        <section class="portfolio-area mb-30">
+            <div class="container-fluid">
+              <div class="row g-0">
+                 <div class="col-xl-4">
+                    <div class="portfolio-item">
+                        <img src="assets/img/case-1.jpg" alt="">
+                    </div>
+                 </div> 
+                 <div class="col-xl-4">
+                    <div class="portfolio-item">
+                        <img src="assets/img/case-2.jpg" alt="">
+                    </div>
+                 </div>
+                 <div class="col-xl-4">
+                    <div class="portfolio-item">
+                        <img src="assets/img/case-3.jpg" alt="">
+                    </div>
+                 </div>  
+                </div>
+            </div>
+        </section>
+        <!--Portfolio-area end--> 
+
+
+
+
+
 
 
 
