Sycho with Sass

--- a/index.html
+++ b/index.html
@@ -367,9 +367,9 @@
         </section>
         <!--Get-Appoinmentment-area end--> 
         <!--Portfolio-area-start--> 
-        <section class="portfolio-area mb-30">
+        <section class="portfolio-area pb-100"style="background-image: url(assets/img/features-bg.jpg);">
             <div class="container-fluid">
-              <div class="row g-0">
+              <div class="row gx-0">
                  <div class="col-xl-4">
                     <div class="portfolio-item">
                         <img src="assets/img/case-1.jpg" alt="">
@@ -389,8 +389,45 @@
             </div>
         </section>
         <!--Portfolio-area end--> 
-
-
+        <!--Contact-area start--> 
+        <div class="contact-area pl-120" style="background-image: url(assets/img/slider-bg.jpg);">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xl-5">
+                        <div class="contact-form">
+                            <form action="#">
+                                <div class="row">
+                                    <div class="col-xl-6 mb-20">
+                                        <input type="text" placeholder="Name">
+                                    </div>
+                                    <div class="col-xl-6 mb-20">
+                                        <input type="text" placeholder="Email">
+                                    </div>
+                                    <div class="col-xl-6 mb-20">
+                                        <input type="text" placeholder="Email">
+                                    </div>
+                                    <div class="col-xl-6 mb-20">
+                                        <div class="contact-select">
+                                            <select name="subject">
+                                                <option value="one">Subject 01</option>
+                                                <option value="one">Subject 02</option>
+                                                <option value="one">Subject 03</option>
+                                                <option value="one">Subject 04</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-12 mb-20">
+                                       <textarea name="message" id="" cols="30" rows="10" placeholder="message"></textarea>
+                                       <button class="button-2" type="submit">Submit</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Contact-area  end--> 
 
 
 
