Sycho with Sass

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         </section>
         <!--Get-Appoinmentment-area end--> 
         <!--Portfolio-area-start--> 
-        <section class="portfolio-area pb-100"style="background-image: url(assets/img/features-bg.jpg);">
+        <section class="portfolio-area pb-120"style="background-image: url(assets/img/features-bg.jpg);">
             <div class="container-fluid">
               <div class="row gx-0">
                  <div class="col-xl-4">
@@ -390,44 +390,62 @@
         </section>
         <!--Portfolio-area end--> 
         <!--Contact-area start--> 
-        <div class="contact-area pl-120" style="background-image: url(assets/img/slider-bg.jpg);">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-xl-5">
-                        <div class="contact-form">
-                            <form action="#">
-                                <div class="row">
-                                    <div class="col-xl-6 mb-20">
-                                        <input type="text" placeholder="Name">
-                                    </div>
-                                    <div class="col-xl-6 mb-20">
-                                        <input type="text" placeholder="Email">
-                                    </div>
-                                    <div class="col-xl-6 mb-20">
-                                        <input type="text" placeholder="Email">
-                                    </div>
-                                    <div class="col-xl-6 mb-20">
-                                        <div class="contact-select">
-                                            <select name="subject">
-                                                <option value="one">Subject 01</option>
-                                                <option value="one">Subject 02</option>
-                                                <option value="one">Subject 03</option>
-                                                <option value="one">Subject 04</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-12 mb-20">
-                                       <textarea name="message" id="" cols="30" rows="10" placeholder="message"></textarea>
-                                       <button class="button-2" type="submit">Submit</button>
+        <section class="contact-area pl-120 pb-100 mt-100"style="background-image: url(assets/img/slider-bg.jpg);">
+           <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-5 d-flex">
+                    <div class="contact-form">
+                        <div class="section-title-wrap section-title-white  mb-60 mt-100 pt-100">
+                            <div class="section-sub-title mb-20">
+                                <img src="assets/img/sec-icon-1.png" alt="">
+                            </div>
+                            <h2 class="section-title mb-10">Have any Emergency problem Don’t Hesitate</h2>
+                        </div>
+                        <form action="#">
+                            <div class="row">
+                                <div class="col-xl-6 mb-20">
+                                    <input type="text" placeholder="Name">
+                                </div>
+                                <div class="col-xl-6 mb-20">
+                                    <input type="text" placeholder="Email">
+                                </div>
+                                <div class="col-xl-6 mb-20">
+                                    <input type="text" placeholder="Email">
+                                </div>
+                                <div class="col-xl-6 mb-20">
+                                    <div class="contact-select">
+                                        <select name="subject">
+                                            <option value="one">Problem Choose</option>
+                                            <option value="one">Subject 01</option>
+                                            <option value="one">Subject 02</option>
+                                            <option value="one">Subject 03</option>
+                                            <option value="one">Subject 04</option>
+                                        </select>
+                                        <i class="fas fa-angle-down"></i>
                                     </div>
                                 </div>
-                            </form>
-                        </div>
+                                <div class="col-xl-12 mb-20">
+                                    <textarea name="message" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                                    <button class="contact-button" type="submit">Submit Message</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-xl-7">
+                    <div class="our-map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d71393.66599619281!2d90.
+                        30792739314782!3d23.983406224907117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!
+                        2sbd!4v1738682016533!5m2!1sen!2sbd" allowfullscreen="" ></iframe>
                     </div>
                 </div>
             </div>
-        </div>
+           </div>
+        </section>
         <!--Contact-area  end--> 
+        <!---Brand-area  start-->
+        <!---Brand-area  end-->
+
 
 
 
