Sycho with Sass

--- a/index.html
+++ b/index.html
@@ -444,6 +444,39 @@
         </section>
         <!--Contact-area  end--> 
         <!---Brand-area  start-->
+        <div class="brand-area pl-105 pr-105 pb-40 pt-100">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xl-3">
+                        <div class="brand-bg">
+                            
+                        </div>
+                        <div class="brand-text">
+                            <h3>Certificate & Awards</h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-9">
+                        <div class="brand-active"  style="background-image: url(assets/img/features-bg.jpg);">
+                            <div class="brand-item">
+                                <img src="assets/img/award-1.png" alt="">
+                            </div>
+                            <div class="brand-item">
+                                <img src="assets/img/award-2.png" alt="">
+                            </div>
+                            <div class="brand-item">
+                                <img src="assets/img/award-3.png" alt="">
+                            </div>
+                            <div class="brand-item">
+                                <img src="assets/img/award-4.png" alt="">
+                            </div>
+                            <div class="brand-item">
+                                <img src="assets/img/award-5.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!---Brand-area  end-->
 
 
