--- a/index.html
+++ b/index.html
@@ -443,6 +443,114 @@
            </div>
         </section>
         <!--Contact-area  end--> 
+
+       <!--Articles-area  start--> 
+       <div class="article-area mb-70 ml-100 mr-100">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section-title-wrap text-center mb-60 mt-100">
+                        <div class="section-sub-title mb-30">
+                            <img src="assets/img/sec-icon-1.png" alt="">
+                        </div>
+                        <h2 class="section-title mb-10">Every Single Update And Recent 
+                           <br> Story From Our Blog</h2>
+                        <span>popular articles</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-4">
+                    <div class="article-img">
+                        <img src="assets/img/blog-1.jpg" alt="">
+                    </div>
+                    <div class="article-content pt-60 pb-30">
+                        <div class="calender">
+                            <h5>25</h5>
+                            <span>AUG</span>
+                        </div>
+                        <div class="article-up">
+                            <span>
+                            <a href="#"><i class="far fa-user"></i>Buffet Causta</a>
+                           </span>
+                        </div>
+                        <h2>Evening heaven on spirit them goes first created god together.</h2>
+                        <div class="article-meta">
+                            <span>
+                            <a href="#"><i class="fas fa-tag"></i>Couple Problem</a>
+                            </span>
+                            <span class="Comment">
+                                <a href="#"><i class="far fa-comments"></i> 2 Comment</a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="article-img">
+                        <img src="assets/img/blog-2.jpg" alt="">
+                    </div>
+                    <div class="article-content pt-60 pb-30">
+                        <div class="calender">
+                            <h5>27</h5>
+                            <span>AUG</span>
+                        </div>
+                        <div class="article-up">
+                            <span>
+                            <a href="#"><i class="far fa-user"></i>Buffet Causta</a>
+                           </span>
+                        </div>
+                        <h2>Evening heaven on spirit them goes first created god together.</h2>
+                        <div class="article-meta">
+                            <span>
+                            <a href="#"><i class="fas fa-tag"></i>Couple Problem</a>
+                            </span>
+                            <span class="Comment">
+                                <a href="#"><i class="far fa-comments"></i> 2 Comment</a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="article-img">
+                        <img src="assets/img/blog-3.jpg" alt="">
+                    </div>
+                    <div class="article-content pt-60 pb-30">
+                        <div class="calender">
+                            <h5>29</h5>
+                            <span>AUG</span>
+                        </div>
+                        <div class="article-up">
+                            <span>
+                            <a href="#"><i class="far fa-user"></i>Buffet Causta</a>
+                           </span>
+                        </div>
+                        <h2>Evening heaven on spirit them goes first created god together.</h2>
+                        <div class="article-meta">
+                            <span>
+                            <a href="#"><i class="fas fa-tag"></i>Couple Problem</a>
+                            </span>
+                            <span class="Comment">
+                                <a href="#"><i class="far fa-comments"></i> 2 Comment</a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+       </div>
+       <!--Articles-area  end--> 
+
+
+
+
+
+
+
+
+
+
+
+
         <!---Brand-area  start-->
         <div class="brand-area pl-105 pr-105 pb-40 pt-100">
             <div class="container-fluid">
