--- a/index.html
+++ b/index.html
@@ -541,24 +541,11 @@
        <!--Articles-area  end--> 
 
 
-
-
-
-
-
-
-
-
-
-
         <!---Brand-area  start-->
         <div class="brand-area pl-105 pr-105 pb-40 pt-100">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xl-3">
-                        <div class="brand-bg">
-                            
-                        </div>
                         <div class="brand-text">
                             <h3>Certificate & Awards</h3>
                         </div>
@@ -579,6 +566,73 @@
                             </div>
                             <div class="brand-item">
                                 <img src="assets/img/award-5.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-3">
+                        <div class="footer_widget pt-100">
+                            <div class="logo">
+                                <a href="index.html"><img src="assets/img/logo.png" alt=""></a>
+                            </div>
+                            <div class="footer_area">
+                                <p>Waters divided said aims kind seicond winged form it tree after female the deep 
+                                    at itself creepeth land bring place day sea dont caus may thing open who their 
+                                    midst to seas</p>
+                            </div>
+                            <div class="social">
+                                <h4>Follow us</h4>
+                                <ul>
+                                    <li>
+                                        <a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li>
+                                        <a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li>
+                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fab fa-instagram"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-2">
+                        <div class="footer-service pt-100">
+                            <div class="footer-title">
+                                <h4>Services</h4>
+                            </div>
+                            <div class="footer-list">
+                                <ul>
+                                    <li>
+                                        <a href="#">Business Frustation</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Anxiety Dosorder</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Personal Meeting</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Couple Therapy</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Dating & Relation</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Depression Problem</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Mental Problem</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Business Frustation</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
