--- a/index.html
+++ b/index.html
@@ -636,6 +636,28 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-xl-2">
+                        <div class="footer-contact">
+                            <div class="contact-title">
+                                <h4>Contact Info</h4>
+                            </div>
+                            <div class="footer-area">
+                                <p>House no 35, Palmall street, London, England</p>
+                            </div>
+                            <div class="email">
+                                Email:
+                                info@basictheme.com
+                            </div>
+                            <div class="number">
+                                Support:
+                                +1 325 562 3265
+                            </div>
+                            <div class="website">
+                                Website:
+                                www.basictheme.com
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
