Sycho with Sass

--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                         </div>
                     </div>
                     <div class="col-xl-2">
-                        <div class="footer-contact">
+                        <div class="footer-contact pt-100">
                             <div class="contact-title">
                                 <h4>Contact Info</h4>
                             </div>
