Sycho with Sass

--- a/index.html
+++ b/index.html
@@ -645,16 +645,30 @@
                                 <p>House no 35, Palmall street, London, England</p>
                             </div>
                             <div class="email">
-                                Email:
-                                info@basictheme.com
+                                <h5>Email:</h5>
+                                <p>info@basictheme.com</p>
                             </div>
                             <div class="number">
-                                Support:
-                                +1 325 562 3265
+                                <h5>Support:</h5>
+                                <p>+1 325 562 3265</p>
                             </div>
                             <div class="website">
-                                Website:
-                                www.basictheme.com
+                                <h5>Website:</h5>
+                                <p>www.basictheme.com</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="footer-form">
+                            <div class="footer-title pt-100">
+                                <h4>Stay in Touch</h4>
+                                <p>Fruitful and herb the seasons of fish saying likeness face beast cattle.</p>
+                            </div>
+                            <div class="footer_subscribe">
+                                <form action="#">
+                                    <input type="email" placeholder="Email Address">
+                                    <button class="button-2" type="submit">SUBSCRIBE NOW</button>
+                                </form>
                             </div>
                         </div>
                     </div>
