Sycho with Sass

--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                             </div>
                             <div class="footer_subscribe">
                                 <form action="#">
-                                    <input type="email" placeholder="Email Address">
+                                    <input class="email-button" type="email" placeholder="Email Address">
                                     <button class="button-2" type="submit">SUBSCRIBE NOW</button>
                                 </form>
                             </div>
