Sycho with Sass

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-3">
-                        <div class="footer_widget pt-100">
+                        <div class="footer_widget pt-100 mr-10">
                             <div class="logo">
                                 <a href="index.html"><img src="assets/img/logo.png" alt=""></a>
                             </div>
@@ -602,7 +602,7 @@
                         </div>
                     </div>
                     <div class="col-xl-2">
-                        <div class="footer-service pt-100">
+                        <div class="footer-service pt-100 ml-60 mr-20">
                             <div class="footer-title">
                                 <h4>Services</h4>
                             </div>
@@ -637,7 +637,7 @@
                         </div>
                     </div>
                     <div class="col-xl-2">
-                        <div class="footer-contact pt-100">
+                        <div class="footer-contact pt-100 ml-40 mr-30">
                             <div class="contact-title">
                                 <h4>Contact Info</h4>
                             </div>
@@ -659,7 +659,7 @@
                         </div>
                     </div>
                     <div class="col-xl-3">
-                        <div class="footer-form">
+                        <div class="footer-form ml-100">
                             <div class="footer-title pt-100">
                                 <h4>Stay in Touch</h4>
                                 <p>Fruitful and herb the seasons of fish saying likeness face beast cattle.</p>
