Sycho with Sass

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         <!--Get-Appoinmentment-area end--> 
         <!--Portfolio-area-start--> 
         <section class="portfolio-area pb-120"style="background-image: url(assets/img/features-bg.jpg);">
-            <div class="container-fluid">
+            <div class="container-fluid p-0">
               <div class="row gx-0">
                  <div class="col-xl-4">
                     <div class="portfolio-item">
